The smallest OCD alignment fix ever

--- a/ImprovedSchedulingSystemClient/app/search/search.css
+++ b/ImprovedSchedulingSystemClient/app/search/search.css
@@ -7,6 +7,7 @@ th , td  {
     border: 1px solid grey;
     border-collapse: collapse;
     padding: 5px;
+    height: 31px;
 }
 table tr:nth-child(odd) {
     background-color: #ffffff;
